[tool.poetry]
name = "macrobistats"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.36"
python-dotenv = "^0.20.0"
notifiers = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
